--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "form-data": "^4.0.4",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "node-fetch": "^3.3.2"
   }
